[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schedulr-env"
version = "1.0.0"
description = "A real-world task scheduling environment for AI agent evaluation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jay Bhatade", email = "jaybhatade@example.com"}
]
keywords = ["openenv", "reinforcement-learning", "scheduling", "agent-environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0" 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/jaybhatade/schedulr-env"
Repository = "https://huggingface.co/spaces/jaybhatade/schedulr-env"
Documentation = "https://huggingface.co/spaces/jaybhatade/schedulr-env"


[tool.setuptools.package-data]
schedulr_env = ["*.yaml"]

[project.scripts]
server = "server.app:app"